made login button into a link to match other headers. fixed footer. fixed alignment issues

--- a/client/src/style.css
+++ b/client/src/style.css
@@ -5,7 +5,8 @@ body {
     padding: 0;
     justify-content: center;
     align-items: center;
-    min-height: 100vh;    
+    min-height: 100vh;  
+    margin-bottom: 50px;  
 }
 
 /*NAVIGATION*/
@@ -13,12 +14,22 @@ body {
     padding: 0px 15px 0px 15px;
     font-family: 'Wallpoet', cursive;
     font-size: 2em;
+    transition: transform .2s; 
+}
+.Hero:hover {
+    transform: scale(1.2);
 }
 
-.ltgray:hover {
+.header{
+    transition: transform .2s;
+    margin: 4px 2px 4px 0;
+
+}
+.header:hover {
     background-color: #696969;
     color: #2e2e6e !important;
     font-weight: 900;
+    transform: scale(1.1);
 }
 
 .navbar{
@@ -30,8 +41,8 @@ body {
 }
 
 .toggle {
-    background-color: #84818d!important;
-    border:solid 1px white;
+    background-color: #ededed!important;
+    border:solid 1px #C7C7C7;
 }
 
 /*CUSTOM CLASSES*/
@@ -46,8 +57,7 @@ body {
 }
 
 .ltgray {
-    color: #ededed !important;
-    
+    color: #ededed !important;  
 }
 
 .infoDiv {
@@ -70,11 +80,6 @@ body {
 
 /*DASHBOARD*/
 /*welcome div*/
-.intro {
-    margin-top: 2%;
-    font-family: 'Roboto', sans-serif !important;
-}
-
 
 .editBtn {
     float: right;
@@ -97,7 +102,7 @@ color: #2e2e6e;
 
 /*employee info div*/
 .userInfo{
-    margin-top: 30px;
+    margin-top: 25px;
     padding: 30px 0px 20px 0px;
     font-size: 1.2em;
 }
@@ -135,7 +140,7 @@ color: #2e2e6e;
     box-shadow: 5px 5px 5px #696969;
     border-radius: 5px;
     border: 1px #FFFFFF solid;
-    font-size: 1em;
+    font-size: 1.9vh;
 }
 
 footer {
@@ -143,7 +148,13 @@ footer {
     left:0;
     bottom: 0;
     width: 100%;
+    margin-top:20px;
     background-color: #2e2e6e;
     color: #D3D3D3;
     font-family: 'Wallpoet', cursive;
+}
+
+.title {
+    text-align: center;
+    border-top: solid 1px #969696;
 }
